bk_ida/gobmkida/c1/attack2
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/attack2/src/engine/reading.c:3159:29: error: use of undeclared identifier 'byte_9AA89F'
&& v14 != ( unsigned __int8)byte_9AA89F[v17] 
                            ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/attack2/src/engine/reading.c:3160:29: error: use of undeclared identifier 'byte_9AA88C'
&& v14 != ( unsigned __int8)byte_9AA88C[v17] 
                            ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/attack2/src/engine/reading.c:3376:23: error: use of undeclared identifier 'unk_48870B'
v52 = ( const char *)&unk_48870B; 
                      ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/attack2/src/obj/1/reading.o] Error 1
